# mender-esp32-example

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: check_headers.sh  ci.yml
components/mender-mcu-client/: CMakeLists.txt
components/msgpack-c/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  idf_component.yml  main.c
